--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class = "background-section">
         <div class="half-width">
             <h1>Welcome to</h1>
             <h1><span class="orange-color">Rasheds</span> World!</h1>
@@ -21,6 +21,17 @@
         </div>
         <div class="half-width">
             <img src="images/jhankar.png"> 
+        </div>
+    </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/jhankar2.png">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a web Developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
         </div>
     </section>
 </body>
